# trnsolver

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  neuron.yml  publish.yml
benchmarks/: bench_cuda.py  bench_solver.py  conftest.py
docs/: architecture.md  aws_setup.md  benchmarks.md  developing_kernels.md  index.md  installation.md  quickstart.md
docs/api/: eigen.md  factor.md  iterative.md  nki.md
examples/: scf_eigen.py
infra/terraform/: README.md  gpu.tf  main.tf
scripts/: run_cuda_tests.sh  run_neuron_tests.sh  run_simulator_tests.sh  stop_neuron_ci.sh
tests/: conftest.py  test_dtype.py  test_eigen.py  test_eigh_neuron.py  test_factor.py  test_iterative.py  test_jacobi_neuron.py  test_jacobi_simulator.py  test_nki_sim.py
trnsolver/: __init__.py  _brent_luk.py  eigen.py  factor.py  iterative.py
trnsolver/nki/: __init__.py  dispatch.py
