[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trnsolver"
version = "0.1.0"
description = "Linear solvers and eigendecomposition for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scott@playgroundlogic.co" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    "neuronxcc>=2.15",
    "torch-neuronx>=2.1",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/trnsci/trnsolver"
Repository = "https://github.com/trnsci/trnsolver"
Issues = "https://github.com/trnsci/trnsolver/issues"

[tool.setuptools.packages.find]
include = ["trnsolver*"]

[tool.pytest.ini_options]
markers = [
    "neuron: requires Neuron hardware (trn1/trn2 instance)",
]
testpaths = ["tests"]
