[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trnsolver"
version = "0.3.0"
description = "Linear solvers and eigendecomposition for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # NKI 0.3.0 Stable (Neuron SDK 2.29+, April 2026). trnsolver imports
    # from the canonical `nki.*` namespace; the legacy `neuronxcc.nki.*`
    # shim is not used. The SDK 2.29 DLAMI bundles nki==0.3.0 alongside
    # neuronxcc==2.24.5133.
    #
    # These packages ship pre-installed on the Deep Learning AMI Neuron
    # venv at /opt/aws_neuronx_venv_pytorch_*/ — infra/terraform's AMI
    # filter + most_recent=true picks up new SDKs automatically. This
    # extra is for hosts that need the simulator path outside the DLAMI
    # (e.g. ubuntu-latest CI runners), installable from the AWS pip index
    # at https://pip.repos.neuron.amazonaws.com.
    "nki>=0.3.0",
    "neuronxcc>=2.24",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/trnsci/trnsolver"
Documentation = "https://trnsci.dev/trnsolver/"
Repository = "https://github.com/trnsci/trnsolver"
Issues = "https://github.com/trnsci/trnsolver/issues"

[tool.setuptools.packages.find]
include = ["trnsolver*"]

[tool.ruff]
# Match the rest of the trnsci suite. Line length 100 is a compromise
# between black's 88 and the wider tables common in scientific code.
line-length = 100
target-version = "py310"
extend-exclude = ["site", "infra/terraform*/.terraform"]

[tool.ruff.lint]
# Sensible default selection: pycodestyle (E/W), Pyflakes (F), isort (I),
# pyupgrade (UP), flake8-bugbear (B), flake8-simplify (SIM). Skip docstring
# rules (D*) — we're deliberately light on docstrings in this project.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — formatter handles it
    "B008",   # function call in default arg — common + intentional here
]

[tool.ruff.lint.per-file-ignores]
# NKI kernels use patterns that trip some lint rules (SBUF writes that
# look unused to the linter, etc). Don't fight the kernel authoring loop.
"trnsolver/nki/dispatch.py" = ["F841", "B007"]
"scripts/*" = ["F401"]
"tests/*"   = ["F401", "F811"]

[tool.ruff.format]
# Black-compatible defaults.
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "neuron: requires Neuron hardware (trn1/trn2 instance)",
    "nki_simulator: routes dispatch through nki.simulate on CPU (TRNSOLVER_USE_SIMULATOR=1)",
    "cuda: requires an Nvidia GPU (cuSOLVER baselines)",
]
testpaths = ["tests"]
